2010-07-16  Fady Samuel  <fsamuel@chromium.org>

Reviewed by David Levin.

        Added layout test to show correct zero-width stroke.

        SVG - stroke-width:0 bug with stroke other than "none"
        https://bugs.webkit.org/show_bug.cgi?id=42387

        * platform/chromium-linux/svg/stroke/path-zero-strokewidth-test-expected.checksum: Added.
        * platform/chromium-linux/svg/stroke/path-zero-strokewidth-test-expected.png: Added.
        * platform/chromium-linux/svg/stroke/path-zero-strokewidth-test-expected.txt: Added.
        * platform/chromium-mac/svg/stroke/path-zero-strokewidth-test-expected.checksum: Added.
        * platform/chromium-mac/svg/stroke/path-zero-strokewidth-test-expected.png: Added.
        * platform/chromium-mac/svg/stroke/path-zero-strokewidth-test-expected.txt: Added.
        * platform/mac/svg/stroke/path-zero-strokewidth-test-expected.checksum: Added.
        * platform/mac/svg/stroke/path-zero-strokewidth-test-expected.png: Added.
        * platform/mac/svg/stroke/path-zero-strokewidth-test-expected.txt: Added.
        * svg/stroke/path-zero-strokewidth-test.svg: Added.
2010-07-16  Fady Samuel  <fsamuel@chromium.org>

        Reviewed by David Levin.

        Avoids adding stroke when stroke-width is zero.

        SVG - stroke-width:0 bug with stroke other than "none"
        https://bugs.webkit.org/show_bug.cgi?id=42387

        Test: svg/stroke/path-zero-strokewidth-test.svg

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::drawConvexPolygon):
        (WebCore::GraphicsContext::drawEllipse):
        (WebCore::GraphicsContext::drawLine):
        (WebCore::GraphicsContext::strokeArc):
        (WebCore::GraphicsContext::strokePath):
        (WebCore::GraphicsContext::strokeRect):

Canonical link: https://commits.webkit.org/54433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63593 268f45cc-cd09-0410-ab3c-d52691b4dbfc